--- a/src/main/resources/templates/layouts/base-template.html
+++ b/src/main/resources/templates/layouts/base-template.html
@@ -2,56 +2,56 @@
 
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
 
-<head th:replace="layout/fragments/header :: header"></head>
+<head th:replace="layouts/fragments/header :: header"></head>
 
 <body class="nav-md">
+	
+	<div class="container body" >
+		<div class="main_container" layout:fragment="content"></div>
+	</div>
+	
+	<!-- jQuery -->
+    <script th:src="@{~/vendors/jquery/dist/jquery.min.js}"></script>
+    <!-- Bootstrap -->
+    <script th:src="@{~/vendors/bootstrap/dist/js/bootstrap.min.js}"></script>
+    <!-- FastClick -->
+    <script th:src="@{~/vendors/fastclick/lib/fastclick.js}"></script>
+    <!-- NProgress -->
+    <script th:src="@{~/vendors/nprogress/nprogress.js}"></script>
+    <!-- Chart.js -->
+    <script th:src="@{~/vendors/Chart.js/dist/Chart.min.js}"></script>
+    <!-- gauge.js -->
+    <script th:src="@{~/vendors/gauge.js/dist/gauge.min.js}"></script>
+ 
+    <script th:src="@{~/vendors/bootstrap-progressbar/bootstrap-progressbar.min.js}"></script>
+    <!-- iCheck -->
+    <script th:src="@{~/vendors/iCheck/icheck.min.js}"></script>
 
-	<div class="container body" layout:fragment="content"></div>
+    <script th:src="@{~/vendors/skycons/skycons.js}"></script>
+
+    <script th:src="@{~/vendors/Flot/jquery.flot.js}"></script>
+    <script th:src="@{~/vendors/Flot/jquery.flot.pie.js}"></script>
+    <script th:src="@{~/vendors/Flot/jquery.flot.time.js}"></script>
+    <script th:src="@{~/vendors/Flot/jquery.flot.stack.js}"></script>
+    <script th:src="@{~/vendors/Flot/jquery.flot.resize.js}"></script>
+   
+    <script th:src="@{~/vendors/flot.orderbars/js/jquery.flot.orderBars.js}"></script>
+    <script th:src="@{~/vendors/flot-spline/js/jquery.flot.spline.min.js}"></script>
+    <script th:src="@{~/vendors/flot.curvedlines/curvedLines.js}"></script>
+    <!-- DateJS -->
+    <script th:src="@{~/vendors/DateJS/build/date.js}"></script>
+    <!-- JQVMap -->
+    <script th:src="@{~/vendors/jqvmap/dist/jquery.vmap.js}"></script>
+    <script th:src="@{~/vendors/jqvmap/dist/maps/jquery.vmap.world.js}"></script>
+    <script th:src="@{~/vendors/jqvmap/examples/js/jquery.vmap.sampledata.js}"></script>
+
+    <script th:src="@{~/vendors/moment/min/moment.min.js}"></script>
+    <script th:src="@{~/vendors/bootstrap-daterangepicker/daterangepicker.js}"></script>
 	
-	<footer class="footer_area clearfix" th:replace="layout/fragments/footer :: footer"></footer>
-	
-	<div layout:fragment="scripts"></div>
-	
-		<!-- jQuery -->
-	    <script src="../vendors/jquery/dist/jquery.min.js"></script>
-	    <!-- Bootstrap -->
-	    <script src="../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-	    <!-- FastClick -->
-	    <script src="../vendors/fastclick/lib/fastclick.js"></script>
-	    <!-- NProgress -->
-	    <script src="../vendors/nprogress/nprogress.js"></script>
-	    <!-- Chart.js -->
-	    <script src="../vendors/Chart.js/dist/Chart.min.js"></script>
-	    <!-- gauge.js -->
-	    <script src="../vendors/gauge.js/dist/gauge.min.js"></script>
-	    <!-- bootstrap-progressbar -->
-	    <script src="../vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
-	    <!-- iCheck -->
-	    <script src="../vendors/iCheck/icheck.min.js"></script>
-	    <!-- Skycons -->
-	    <script src="../vendors/skycons/skycons.js"></script>
-	    <!-- Flot -->
-	    <script src="../vendors/Flot/jquery.flot.js"></script>
-	    <script src="../vendors/Flot/jquery.flot.pie.js"></script>
-	    <script src="../vendors/Flot/jquery.flot.time.js"></script>
-	    <script src="../vendors/Flot/jquery.flot.stack.js"></script>
-	    <script src="../vendors/Flot/jquery.flot.resize.js"></script>
-	    <!-- Flot plugins -->
-	    <script src="../vendors/flot.orderbars/js/jquery.flot.orderBars.js"></script>
-	    <script src="../vendors/flot-spline/js/jquery.flot.spline.min.js"></script>
-	    <script src="../vendors/flot.curvedlines/curvedLines.js"></script>
-	    <!-- DateJS -->
-	    <script src="../vendors/DateJS/build/date.js"></script>
-	    <!-- JQVMap -->
-	    <script src="../vendors/jqvmap/dist/jquery.vmap.js"></script>
-	    <script src="../vendors/jqvmap/dist/maps/jquery.vmap.world.js"></script>
-	    <script src="../vendors/jqvmap/examples/js/jquery.vmap.sampledata.js"></script>
-	    <!-- bootstrap-daterangepicker -->
-	    <script src="../vendors/moment/min/moment.min.js"></script>
-	    <script src="../vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
-	
-	    <!-- Custom Theme Scripts -->
-	    <script src="../build/js/custom.min.js"></script>
+	 <script th:src="@{~/js/helpers/smartresize.js}"></script>
+    <!-- Custom Theme Scripts -->
+    <script th:src="@{~/js/custom.js}"></script>
+		
 </body>
 
 </html>
