--- a/src/main/resources/templates/layouts/fragments/header.html
+++ b/src/main/resources/templates/layouts/fragments/header.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-	  <head>
-	    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	    <!-- Meta, title, CSS, favicons, etc. -->
-	    <meta charset="utf-8">
-	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	    <meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" href="images/favicon.ico" type="image/ico" />
+	<head th:fragment="header">
+	   
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" href="images/favicon.ico" type="image/ico" />
+
+    <title>Travel Agency</title>
+
+    <!-- Bootstrap -->
+    <link th:href="@{~/vendors/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link th:href="@{~/vendors/font-awesome/css/font-awesome.min.css}" rel="stylesheet">
+    <!-- NProgress -->
+    <link th:href="@{~/vendors/nprogress/nprogress.css}" rel="stylesheet">
+    <!-- iCheck -->
+    <link th:href="@{~/vendors/iCheck/skins/flat/green.css}" rel="stylesheet">
 	
-	    <title>Travel Agency</title>
-	
-	    <!-- Bootstrap -->
-	    <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-	    <!-- Font Awesome -->
-	    <link href="../vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-	    <!-- NProgress -->
-	    <link href="../vendors/nprogress/nprogress.css" rel="stylesheet">
-	    <!-- iCheck -->
-	    <link href="../vendors/iCheck/skins/flat/green.css" rel="stylesheet">
-		
-	    <!-- bootstrap-progressbar -->
-	    <link href="../vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet">
-	    <!-- JQVMap -->
-	    <link href="../vendors/jqvmap/dist/jqvmap.min.css" rel="stylesheet"/>
-	    <!-- bootstrap-daterangepicker -->
-	    <link href="../vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
-	
-	    <!-- Custom Theme Style -->
-	    <link href="../build/css/custom.min.css" rel="stylesheet">
-	  </head>
-	<body>	
-	</body>
+    <link th:href="@{~/vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css}" rel="stylesheet">
+    <!-- JQVMap -->
+    <link th:href="@{~/vendors/jqvmap/dist/jqvmap.min.css}" rel="stylesheet"/>
+
+    <link th:href="@{~/vendors/bootstrap-daterangepicker/daterangepicker.css}" rel="stylesheet">
+
+    <!-- Custom Theme Style -->
+    <link th:href="@{~/css/daterangepicker.css}" rel="stylesheet">
+    <link th:href="@{~/css/custom.css}" rel="stylesheet">
+
+	</head>	
 </html>
