--- a/src/main/resources/templates/layouts/fragments/footer.html
+++ b/src/main/resources/templates/layouts/fragments/footer.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<body>
-		<footer>
+		<!-- footer content -->
+        <footer th:fragment="footer">
           <div class="pull-right">
-            Travel Agency
+            Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
           </div>
           <div class="clearfix"></div>
-        </footer> 
+        </footer>
+        <!-- /footer content -->
         
 	</body>
-	
 </html>
