--- a/src/main/resources/templates/layouts/fragments/header.html
+++ b/src/main/resources/templates/layouts/fragments/header.html
@@ -25,7 +25,9 @@
     <link th:href="@{~/vendors/jqvmap/dist/jqvmap.min.css}" rel="stylesheet"/>
 
     <link th:href="@{~/vendors/bootstrap-daterangepicker/daterangepicker.css}" rel="stylesheet">
-
+	
+	<link th:href="@{~/vendors/animate.css/animate.min.css}" rel="stylesheet">
+	
     <!-- Custom Theme Style -->
     <link th:href="@{~/css/daterangepicker.css}" rel="stylesheet">
     <link th:href="@{~/css/custom.css}" rel="stylesheet">
