user profile page

--- a/src/main/resources/templates/layouts/base-template.html
+++ b/src/main/resources/templates/layouts/base-template.html
@@ -57,6 +57,13 @@
     <script th:src="@{~/vendors/bootstrap-daterangepicker/daterangepicker.js}"></script>
 	
 	 <script th:src="@{~/js/helpers/smartresize.js}"></script>
+	 
+	 <!-- morris.js -->
+    <script th:src="@{~/vendors/raphael/raphael.min.js}"></script>
+    <script th:src="@{~/vendors/morris.js/morris.min.js}"></script>
+    <!-- bootstrap progress bar -->
+    <script th:src="@{~/vendors/bootstrap-progressbar/bootstrap-progressbar.min.js}"></script>
+    
     <!-- Custom Theme Scripts -->
     <script th:src="@{~/js/custom.js}"></script>
 		
