--- a/src/main/resources/templates/layouts/fragments/header.html
+++ b/src/main/resources/templates/layouts/fragments/header.html
@@ -28,6 +28,13 @@
 	
 	<link th:href="@{~/vendors/animate.css/animate.min.css}" rel="stylesheet">
 	
+	  <!-- Datatables -->
+    <link th:href="@{~/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{~/vendors/datatables.net-buttons-bs/css/buttons.bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{~/vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{~/vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{~/vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css}" rel="stylesheet">
+    
     <!-- Custom Theme Style -->
     <link th:href="@{~/css/daterangepicker.css}" rel="stylesheet">
     <link th:href="@{~/css/custom.css}" rel="stylesheet">
