--- a/src/main/resources/templates/layouts/base-template.html
+++ b/src/main/resources/templates/layouts/base-template.html
@@ -15,9 +15,11 @@
 			<div class="right_col" role="main" layout:fragment="content"></div>
 			
 			<footer th:replace="layouts/fragments/footer :: footer"></footer>
+			
+			<div layout:fragment="scripts"></div>
 		</div>
 	</div>
-	
+		
 	<!-- jQuery -->
     <script th:src="@{~/vendors/jquery/dist/jquery.min.js}"></script>
     <!-- Bootstrap -->
@@ -77,11 +79,13 @@
     <script th:src="@{~/vendors/datatables.net-responsive/js/dataTables.responsive.min.js}"></script>
     <script th:src="@{~/vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js}"></script>
     <script th:src="@{~/vendors/datatables.net-scroller/js/dataTables.scroller.min.js}"></script>
+    
     <script th:src="@{~/vendors/jszip/dist/jszip.min.js}"></script>
     <script th:src="@{~/vendors/pdfmake/build/pdfmake.min.js}"></script>
     <script th:src="@{~/vendors/pdfmake/build/vfs_fonts.js}"></script>
-    
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!-- Custom Theme Scripts -->
+    <script th:src="@{~/js/app.js}"></script>
     <script th:src="@{~/js/custom.js}"></script>
 		
 </body>
