--- a/src/main/resources/templates/layouts/fragments/header.html
+++ b/src/main/resources/templates/layouts/fragments/header.html
@@ -34,9 +34,11 @@
     <link th:href="@{~/vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{~/vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{~/vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css}" rel="stylesheet">
-    
+   
+     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <!-- Custom Theme Style -->
     <link th:href="@{~/css/daterangepicker.css}" rel="stylesheet">
+    <link th:href="@{~/css/app.css}" rel="stylesheet">
     <link th:href="@{~/css/custom.css}" rel="stylesheet">
 
 	</head>	
