--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -5,8 +5,8 @@
   width: 100%;
   height: 100%;
   z-index: 99999999;
-  background-color: white;
-  opacity: .8; }
+  background-color: black;
+  opacity: .5; }
 
 .ajax-loader {
   position: absolute;
@@ -15,3 +15,91 @@
   margin-left: -85px;
   margin-top: -11px;
   display: block; }
+  .ui-dialog .ui-dialog-content{
+  padding:20px;
+  color: #73879c;
+  }
+.ui-widget-overlay{
+	background: black;
+	opacity: 0.5;
+}
+.ui-widget-header {
+    padding: 15px;
+    border: none;
+    border-bottom: 1px solid #e5e5e5;
+    background: none;
+    font-weight: normal;
+}
+
+.ui-dialog {
+	padding: 0;
+	border: none;
+	border-top-left-radius: 8px;
+	border-top-right-radius: 8px;
+	border-bottom-left-radius: 8px;
+	border-bottom-right-radius: 8px;
+	webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
+    box-shadow: 0 5px 15px rgba(0,0,0,.5);
+    font-family: "Helvetica Neue",Roboto,Arial,"Droid Sans",sans-serif;
+    
+}
+.ui-widget-content {
+	border-bottom: 1px solid #e5e5e5;
+}
+
+.ui-dialog .ui-dialog-titlebar {
+    padding: 20px;
+    font-size: 16px;
+    color: #73879c;
+}
+.ui-widget.ui-widget-content{
+	border: none;
+	
+}
+.ui-button {
+	border: none;
+	background: none;
+	
+}
+.ui-button:hover {
+	background: none;
+	border: none;
+
+}
+.ui-dialog .ui-dialog-buttonpane{
+	border-bottom-left-radius: 6px;
+	border-bottom-right-radius: 6px;
+	border-bottom: 1px solid rgba(0,0,0,.2);
+	border-left: 1px solid rgba(0,0,0,.2);
+	border-right: 1px solid rgba(0,0,0,.2);
+}
+.ui-dialog .ui-corner-all {
+	border-bottom-right-radius: 0;
+	border-top-left-radius: 6px;
+	border-bottom-left-radius: 0;
+	border-top-right-radius: 6px;
+}
+.ui-dialog .ui-dialog-titlebar .ui-dialog-titlebar-close {
+	position: absolute;
+    right: 20px;
+    top: 50%;
+    width: 16px;
+    margin: -8px 0 0 0;
+    padding: 1px;
+    height: 16px;
+}
+.ui-dialog .ui-dialog-buttonpane button {
+    margin: 0.5em 0.9em .5em 0;
+    cursor: pointer;
+}
+.ui-dialog .ui-dialog-buttonpane {
+	padding: 11px;
+}
+.ui-dialog .ui-dialog-titlebar .ui-dialog-titlebar-close .ui-icon-closethick:hover {
+	opacity: 0.6;
+}
+.ui-dialog .ui-dialog-titlebar .ui-dialog-titlebar-close .ui-icon-closethick {
+	background-image: url(../images/close.png);
+	opacity: 0.4;
+	background-position: 0 0;
+}
