--- a/src/main/resources/templates/users/user-dialog.html
+++ b/src/main/resources/templates/users/user-dialog.html
@@ -1,5 +1,5 @@
-<div id="delete-user" title="Delete User">
+<div id="delete-user" class="" title="Delete User">
 	  <div>
-	  	Are you sure you want to delete this user?
+	  	Are you sure you want to delete this user, it will be deleted permanently ?
 	  </div>
 </div>
