--- a/src/main/resources/templates/users/users.html
+++ b/src/main/resources/templates/users/users.html
@@ -16,49 +16,7 @@
                   </div>
                   <div class="x_content">
                     <p class="text-muted font-13 m-b-30" th:text="${'List of all users in database available for Admin role'}"></p>
-					
-                    <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
-                      <thead>
-                        <tr>
-                          <th th:text="${'First Name'}"></th>
-                          <th th:text="${'Middle Name'}"></th>
-                          <th th:text="${'Last Name'}"></th>
-                          <th th:text="${'Email'}"></th>
-                          <th th:text="${'Address'}"></th>
-                          <th th:text="${'City'}"></th>
-                          <th th:text="${'State'}"></th>
-                          <th th:text="${'DOB'}"></th>
-                          <th th:text="${'Username'}"></th>
-                          <th th:text="${'Gender'}"></th>
-                          <th th:text="${'Passport'}"></th>
-                          <th th:text="${'Phone'}"></th>
-                          <th th:text="${'Role'}"></th>
-                          <th th:text="${'Actions'}"></th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr th:each="user : ${users}">
-                          <td th:text="${user.name}"></td>
-                          <td th:text="${user.middleName}"></td>
-                          <td th:text="${user.lastName}"></td>
-                          <td th:text="${user.email}"></td>
-                          <td th:text="${user.adress}"></td>
-                          <td th:text="${user.city}"></td>
-                          <td th:text="${user.state}"></td>
-                          <td th:text="${user.dob}"></td>
-                          <td th:text="${user.username}"></td>
-                          <td th:text="${user.gender}"></td>
-                          <td th:text="${user.passport}"></td>
-                          <td th:text="${user.phone}"></td>
-                          <td th:text="${user.role.name}"></td>
-                          <td>
-                          		<a><i class="glyphicon glyphicon-play"></i></a>
-                          		<a><i class="glyphicon glyphicon-pencil"></i></a>
-                          		<a th:user-id="${user.id}"><i onclick="Users.Delete(this);return false;" class="glyphicon glyphicon-remove"></i></a>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>	
+					<div id="users-table"><div th:replace="users/users-table"></div></div>
                   </div>
                 </div>
               </div>
