--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -37,22 +37,31 @@
                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="firstname">First Name <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input type="text" id="firstname" required="required" class="form-control col-md-7 col-xs-12"   placeholder="Name" th:name="name" th:field="*{name}">
+                          <input type="text" id="firstname" required="required" class="form-control col-md-7 col-xs-12"   placeholder="Name" th:name="name" th:field="*{name}" th:errorclass="is-invalid">
+                        
+							    	<div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="invalid-feedback"></div>
                         </div>
                       </div>
                       
                        <div class="form-group">
-                        <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Middle Name / Initial</label>
+                        <label for="middleName" class="control-label col-md-3 col-sm-3 col-xs-12">Middle Name / Initial</label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input id="middle-name" class="form-control col-md-7 col-xs-12" type="text" name="middle-name">
+                          <input type="text" id="middleName" class="form-control col-md-7 col-xs-12" th:name="middleName" placeholder="Middle Name" th:field="*{middleName}" th:errorclass="is-invalid">
+                          
+                          <div th:if="${#fields.hasErrors('middleName')}" th:errors="*{middleName}" class="invalid-feedback"></div>
+                          
                         </div>
                       </div>
                       
                       <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Last Name <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="lastName">Last Name <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input type="text" id="last-name" name="last-name" required="required" class="form-control col-md-7 col-xs-12">
+                          <input type="text" id="lastName" th:name="lastName" required="required" class="form-control col-md-7 col-xs-12" placeholder="Last Name" th:field="*{lastName}" th:errorclass="is-invalid">
+                          
+                          
+                          <div th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}" class="invalid-feedback"></div>
+                          
                         </div>
                       </div>
                       
@@ -63,10 +72,10 @@
                         <div class="col-md-6 col-sm-6 col-xs-12">
                           <div id="gender" class="btn-group" data-toggle="buttons">
                             <label class="btn btn-default" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                              <input type="radio" name="gender" value="male"> &nbsp; Male &nbsp;
+                              <input type="radio" th:name="gender" value="male" th:field="*{gender}"> &nbsp; Male &nbsp;
                             </label>
                             <label class="btn btn-primary" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                              <input type="radio" name="gender" value="female"> Female
+                              <input type="radio" th:name="gender" value="female" th:field="*{gender}"> Female
                             </label>
                           </div>
                         </div>
@@ -77,7 +86,7 @@
                         <div class="control-group">
                             <div class="controls">
                               <div class="col-md-6 col-sm-6 col-xs-12 xdisplay_inputx form-group has-feedback">
-                                <input type="text" class="form-control has-feedback-left" id="single_cal2" placeholder="First Name" aria-describedby="inputSuccess2Status2">
+                                <input type="text" class="form-control has-feedback-left" id="single_cal2" placeholder="Date of Birth" aria-describedby="inputSuccess2Status2" >
                                 <span class="fa fa-calendar-o form-control-feedback left" aria-hidden="true"></span>
                                 <span id="inputSuccess2Status2" class="sr-only">(success)</span>
                               </div>
@@ -90,7 +99,10 @@
                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="email">Email <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input type="text" id="email" required="required" class="form-control col-md-7 col-xs-12">
+                          <input type="text" id="email" required="required" class="form-control col-md-7 col-xs-12" th:name="email" placeholder="email" th:field="*{email}"  th:errorclass="is-invalid">
+                          
+                          <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="invalid-feedback"></div>
+                          
                         </div>
                       </div>
                       
@@ -99,7 +111,11 @@
                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="username">Username <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input type="text" id="username" required="required" class="form-control col-md-7 col-xs-12">
+                          <input type="text" id="username" required="required" class="form-control col-md-7 col-xs-12" th:name="username" placeholder="username" th:field="*{username}" th:errorclass="is-invalid">
+                          
+                          
+                           <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="invalid-feedback"></div>
+                          
                         </div>
                       </div>
                       
@@ -108,14 +124,35 @@
                         <div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12">Password <span class="required">*</span></label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input type="password" class="form-control" value="passwordonetwo">
+                          <input type="password" class="form-control" value="passwordonetwo" th:name="password" placeholder="password" th:field="*{password}" th:errorclass="is-invalid">
+                          
+                          
+                           <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="invalid-feedback"></div>
+                          
                         </div>
                       </div>
                       
                         <div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12">Repeat Password <span class="required">*</span></label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input type="password" class="form-control" value="passwordonetwo">
+                          <input type="password" class="form-control" value="passwordonetwo"  placeholder="password">
+                        </div>
+                      </div>
+                      
+                      
+                      
+                      
+                            <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Role<span class="required">*</span></label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                          <select class="form-control" th:name="role" th:field="*{role}" id="role" th:errorclass="is-invalid">
+                           <option th:each="role: ${roles}" th:text="${role.getName()}" th:value="${role.getId()}"></option>
+                           
+                           
+                           <div th:if="${#fields.hasErrors('role')}" th:errors="*{role}" class="invalid-feedback"></div>
+                           
+                                                    
+                          </select>
                         </div>
                       </div>
                       
@@ -125,9 +162,7 @@
                       <div class="ln_solid"></div>
                       <div class="form-group">
                         <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                          <button class="btn btn-primary" type="button">Cancel</button>
-						  <button class="btn btn-primary" type="reset">Reset</button>
-                          <button type="submit" class="btn btn-success">Submit</button>
+                           <button type="submit" class="btn btn-success">Register</button>
                         </div>
                       </div>
 
