--- a/src/main/resources/templates/layouts/base-template.html
+++ b/src/main/resources/templates/layouts/base-template.html
@@ -58,7 +58,9 @@
     <script th:src="@{~/vendors/moment/min/moment.min.js}"></script>
     <script th:src="@{~/vendors/bootstrap-daterangepicker/daterangepicker.js}"></script>
 	
-	 <script th:src="@{~/js/helpers/smartresize.js}"></script>
+	<!-- bootstrap-datetimepicker -->    
+    <script th:src="@{~/vendors/bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js}"></script>
+	<script th:src="@{~/js/helpers/smartresize.js}"></script>
 	 
 	 <!-- morris.js -->
     <script th:src="@{~/vendors/raphael/raphael.min.js}"></script>
