--- a/src/main/resources/templates/layouts/fragments/header.html
+++ b/src/main/resources/templates/layouts/fragments/header.html
@@ -26,6 +26,8 @@
 
     <link th:href="@{~/vendors/bootstrap-daterangepicker/daterangepicker.css}" rel="stylesheet">
 	
+	<link th:href="@{/vendors/bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css}" rel="stylesheet">
+	
 	<link th:href="@{~/vendors/animate.css/animate.min.css}" rel="stylesheet">
 	
 	  <!-- Datatables -->
