--- a/src/main/resources/templates/cities/cities-table.html
+++ b/src/main/resources/templates/cities/cities-table.html
@@ -17,6 +17,7 @@
 	
 	       <td>
 	       		<a  th:href="@{'/cities/' + ${city.id}}"><i class="glyphicon glyphicon-play"></i></a>
+	       		<a  th:href="@{'/cities/update/' + ${city.id}}"><i class="glyphicon glyphicon-pencil"></i></a>
 	       	    <a th:cityid="${city.id}" onclick="Cities.Delete(this);return false;"><i  class="glyphicon glyphicon-remove"></i></a>
 	       </td>
 	     </tr>
