--- a/src/main/resources/templates/countries/countries-table.html
+++ b/src/main/resources/templates/countries/countries-table.html
@@ -17,6 +17,7 @@
 	
 	       <td>
 	       		<a  th:href="@{'/destinations/' + ${country.id}}"><i class="glyphicon glyphicon-play"></i></a>
+	       		<a  th:href="@{'/destinations/update/' + ${country.id}}"><i class="glyphicon glyphicon-pencil"></i></a>
 	       	    <a th:countryid="${country.id}" onclick="Countries.Delete(this);return false;"><i  class="glyphicon glyphicon-remove"></i></a>
 	       </td>
 	     </tr>
