--- a/src/main/resources/templates/cities/city-form.html
+++ b/src/main/resources/templates/cities/city-form.html
@@ -31,7 +31,7 @@
                   </div>
                   <div class="x_content">
                     <br />
-                    <form   th:action="@{'~/'+${path}}" th:object="${city}" id="city" method="post" data-parsley-validate class="form-horizontal form-label-left">
+                    <form th:action="@{${path}}" th:object="${city}" id="city" method="post" data-parsley-validate class="form-horizontal form-label-left">
 
                       <div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Add City<span class="required">*</span>
