--- a/src/main/resources/templates/users/users-table.html
+++ b/src/main/resources/templates/users/users-table.html
@@ -39,9 +39,9 @@
 	       <td th:text="${user.phone}"></td>
 	       <td th:text="${user.role.name}"></td>
 	       <td>
-	       		<a  th:href="@{'/users/' + ${user.id}}"><i class="glyphicon glyphicon-play"></i></a>
-	       		<a th:href="@{'/users/update/' + ${user.id}}"><i class="glyphicon glyphicon-pencil"></i></a>
-	       		<a th:userid="${user.id}" onclick="Users.Delete(this);return false;"><i  class="glyphicon glyphicon-remove"></i></a>
+	       		<a  th:href="@{'/users/' + ${user.id}}" class="btn btn-primary btn-xs" th:text="View"><i class="fa fa-folder"></i></a>
+	       		<a th:href="@{'/users/update/' + ${user.id}}" class="btn btn-info btn-xs" th:text="Edit"><i class="fa fa-pencil"></i></a>
+	       		<a th:userid="${user.id}" onclick="Users.Delete(this);return false;" class="btn btn-danger btn-xs" th:text="Delete"><i  class="fa fa-trash-o"></i></a>
 	       </td>
 	     </tr>
 	   </tbody>
