--- a/src/main/resources/templates/cities/cities-table.html
+++ b/src/main/resources/templates/cities/cities-table.html
@@ -16,9 +16,9 @@
 	       <td th:text="${city.name}"></td>
 	
 	       <td>
-	       		<a  th:href="@{'/cities/' + ${city.id}}"><i class="glyphicon glyphicon-play"></i></a>
-	       		<a  th:href="@{'/cities/update/' + ${city.id}}"><i class="glyphicon glyphicon-pencil"></i></a>
-	       	    <a th:cityid="${city.id}" onclick="Cities.Delete(this);return false;"><i  class="glyphicon glyphicon-remove"></i></a>
+	       		<a class="btn btn-primary btn-xs" th:text="View" th:href="@{'/cities/' + ${city.id}}"><i class="fa fa-folder"></i></a>
+	       		<a class="btn btn-info btn-xs" style="color:white" th:text="Edit" th:href="@{'/cities/update/' + ${city.id}}"><i class="fa fa-pencil"></i></a>
+	       	    <a class="btn btn-danger btn-xs" th:text="Delete" th:cityid="${city.id}" onclick="Cities.Delete(this);return false;"><i  class="fa fa-trash-o"></i></a>
 	       </td>
 	     </tr>
 	   </tbody>
