--- a/src/main/resources/templates/subtyperooms/subtyperooms.html
+++ b/src/main/resources/templates/subtyperooms/subtyperooms.html
@@ -10,12 +10,12 @@
         	<div class="col-md-6 col-sm-6 col-xs-6">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2 th:text="Subtyperooms"><small th:text="${'all subtyperooms'}"></small></h2>
+                    <h2 th:text="Subtyperooms-Accommodation"><small th:text="${'all subtyperooms'}"></small></h2>
                     
                     <div class="clearfix"></div>
                   </div>
                   <div>
-                    <a class="btn btn-primary" th:href="@{'/subtyperooms/create'}">Create SubtypeRoom</a>
+                    <a class="btn btn-primary" th:href="@{'/subtyperooms/create'}">Create Type of Accommodation</a>
                   </div>
                   <div class="x_content">
                     <p class="text-muted font-13 m-b-30" th:text="${'List of all subtyperooms in database available for Admin role'}"></p>
