subtype service update method, transport service, transport crud

--- a/src/main/resources/templates/countries/country-dialog.html
+++ b/src/main/resources/templates/countries/country-dialog.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" 
-	xmlns:th="http://www.thymeleaf.org" 
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-	
-	<div id="delete-country" class="" title="Delete Country">
-		  <div>
-		  	<div id="cities-table"><div th:replace="cities/cities-table"></div></div>
-		  </div>
-	</div>
-</html>
+<div id="delete-country" class="" title="Delete Country">
+	  <div>
+	  	Are you sure you want to delete this country, it will be deleted permanently ?
+	  </div>
+</div>
