--- a/src/main/resources/templates/layouts/fragments/header.html
+++ b/src/main/resources/templates/layouts/fragments/header.html
@@ -37,7 +37,9 @@
     <link th:href="@{~/vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{~/vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css}" rel="stylesheet">
    
-     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link  href="https://unpkg.com/nanogallery2@2.2.0/dist/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
+      
     <!-- Custom Theme Style -->
     <link th:href="@{~/css/daterangepicker.css}" rel="stylesheet">
     <link th:href="@{~/css/app.css}" rel="stylesheet">
