--- a/src/main/resources/templates/layouts/base-template.html
+++ b/src/main/resources/templates/layouts/base-template.html
@@ -86,6 +86,7 @@
     <script th:src="@{~/vendors/pdfmake/build/pdfmake.min.js}"></script>
     <script th:src="@{~/vendors/pdfmake/build/vfs_fonts.js}"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script  type="text/javascript" src="https://unpkg.com/nanogallery2@2.2.0/dist/jquery.nanogallery2.min.js"></script>
     <!-- Custom Theme Scripts -->
     <script th:src="@{~/js/app.js}"></script>
     <script th:src="@{~/js/custom.js}"></script>
